--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
